[FIX] board: better display graphs in dashboard
In the legacy implementation of the dashboard action, there was a
scss rule that set the height of the canvas of graph views inside
the dashboard to 300px. During the conversion to owl, this rule has
been lost. As a consequence, graphs in the dashboard look squashed.
This commit restores the scss rule to fix the issue.

Bug reported in the feedback pad after migrating odoo.com to 16.0.

X-original-commit: 833f7394ecd88825990eb7d1b338e21bfbab55b5

--- a/addons/board/static/src/board_controller.scss
+++ b/addons/board/static/src/board_controller.scss
@@ -31,6 +31,9 @@
 
     > .o_view_controller {
         padding: 0 12px 12px 12px;
+        .o_graph_renderer canvas {
+            height: 300px;
+        }
     }
 
     .o_column_quick_create {
